--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectX">
         <activity
-            android:name=".DetailsActivity"
+            android:name=".screens.DetailsActivity"
             android:exported="true" />
         <activity
-            android:name=".GetStartedActivity"
+            android:name=".screens.GetStartedActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +22,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignUpActivity"
+            android:name=".screens.SignUpActivity"
             android:exported="true"
-            android:parentActivityName=".GetStartedActivity"></activity>
+            android:parentActivityName=".screens.GetStartedActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
