--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectX">
         <activity
-            android:name=".screens.DetailsActivity"
-            android:exported="true" />
-        <activity
-            android:name=".screens.GetStartedActivity"
-            android:exported="true">
+            android:name=".screens.TeachersActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,9 +19,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".screens.DetailsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".screens.GetStartedActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".screens.SignUpActivity"
             android:exported="true"
-            android:parentActivityName=".screens.GetStartedActivity"></activity>
+            android:parentActivityName=".screens.GetStartedActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
