--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ android {
 dependencies {
     def nav_version = "2.4.0-alpha02"
 
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+
+
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
