--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectX">
         <activity
-            android:name=".screens.LectureHall.MeetingVideoActivity"
+            android:name=".screens.lecturehall.MeetingVideoActivity"
             android:exported="true" />
         <activity
-            android:name=".screens.LectureHall.MeetingHome"
+            android:name=".screens.lecturehall.MeetingHome"
             android:exported="true" />
         <activity
             android:name=".screens.MeetingsActivity"
