--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 
 dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.3'
     def nav_version = "2.4.0-alpha02"
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
